// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -126,11 +126,11 @@
        </div>
        <hr
          class=\\"MuiDivider-root-147 PublicationCitation-divider-137\\"
        />
        <form>
-         <span />
+         <div />
          <div
            class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-24-29\\"
          >
            <div
              class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
@@ -334,29 +334,29 @@
                      <div
                        class=\\"MuiFormControl-root-251\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-262 MuiFormLabel-error-265 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-262 MuiFormLabel-filled-266 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-268 MuiFormLabel-error-265\\"
+                           class=\\"MuiFormLabel-asterisk-268\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-error-295 MuiInput-error-281 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-269\\"
@@ -367,18 +367,16 @@
                              class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
                              focusable=\\"false\\"
@@ -389,15 +387,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-378 MuiFormHelperText-error-379 MuiFormHelperText-required-385\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
                      style=\\"margin-top: 24px;\\"
@@ -1604,10 +1597,76 @@
                        id=\\"Notes for this work\\"
                        name=\\"comments\\"
                        placeholder=\\"Add any other notes or comments about this work to send to the eSpace team.\\"
                        rows=\\"5\\"
                      />
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-24-29 MuiGrid-align-items-xs-flex-start-14 MuiGrid-align-content-xs-center-17 MuiGrid-justify-xs-center-22 Alert-warning-173 Alert-common-165\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-5 MuiGrid-align-items-xs-flex-start-14 MuiGrid-align-content-xs-center-17 MuiGrid-justify-xs-center-22\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-6 Alert-icon-166\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-179 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-6 MuiGrid-grid-xs-true-33 Alert-text-167\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Author affiliation rows marked with red are required
+                           </li>
+                           <li>
+                             Creator research statement is required
+                           </li>
+                           <li>
+                             Audience size is required
+                           </li>
+                           <li>
+                             Quality indicator is required
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -507,22 +507,22 @@
                      <div
                        class=\\"MuiFormControl-root-251\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-262 MuiFormLabel-error-265 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-262 MuiFormLabel-filled-266 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-268 MuiFormLabel-error-265\\"
+                           class=\\"MuiFormLabel-asterisk-268\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-error-295 MuiInput-error-281 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-269\\"
@@ -533,18 +533,16 @@
                              class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
                              focusable=\\"false\\"
@@ -555,15 +553,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-378 MuiFormHelperText-error-379 MuiFormHelperText-required-385\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-6-53\\"
                    >
@@ -1653,13 +1646,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -562,41 +562,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-262 MuiFormLabel-error-265 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-262 MuiFormLabel-filled-266 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-268 MuiFormLabel-error-265\\"
+                           class=\\"MuiFormLabel-asterisk-268\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-error-295 MuiInput-error-281 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                         class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
                        >
                          <div
                            class=\\"MuiSelect-root-269\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
                              focusable=\\"false\\"
@@ -607,15 +606,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-378 MuiFormHelperText-error-379 MuiFormHelperText-required-385\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1646,13 +1640,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                          </ul>
                        </span>
                      </div>
                    </div>"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -960,33 +960,31 @@
                          <li
                            class=\\"MuiListItem-container-350\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 WithTheme-WithWidth-ContributorRow---highlighted-370 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
+                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 WithTheme-WithWidth-ContributorRow---highlighted-370 WithTheme-WithWidth-ContributorRow---rowSelected-371 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-377\\"
+                               class=\\"MuiListItemIcon-root-377 WithTheme-WithWidth-ContributorRow---selected-372\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-179\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M0 0h24v24H0V0z\\"
-                                   fill=\\"none\\"
+                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                  />
-                                 <g>
                                  <path
-                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
                                  />
-                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-5 WithTheme-WithWidth-ContributorRow---listContainer-367\\"
                              >
@@ -995,16 +993,16 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-360\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374 WithTheme-WithWidth-ContributorRow---selected-372 MuiTypography-body2-110 MuiTypography-noWrap-128\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---selected-372 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
@@ -1033,11 +1031,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-240\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-179\\"
+                                     class=\\"MuiSvgIcon-root-179 WithTheme-WithWidth-ContributorRow---selected-372\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1065,11 +1063,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-240\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-179\\"
+                                     class=\\"MuiSvgIcon-root-179 WithTheme-WithWidth-ContributorRow---selected-372\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1529,10 +1527,227 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
+                       <div
+                         style=\\"margin-top: 24px;\\"
+                       >
+                         <div>
+                           <span
+                             class=\\"authorSteps\\"
+                           >
+                             Step 2 of 2
+                           </span>
+                            - 
+                           <b>
+                             Update the affiliation data
+                           </b>
+                            for the selected author below.
+                         </div>
+                         <div
+                           class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
+                           style=\\"margin-top: 8px;\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-2-49\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-262 MuiFormLabel-filled-266 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
+                                 data-shrink=\\"true\\"
+                               >
+                                 Org affiliation
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                                 required=\\"\\"
+                               >
+                                 <div
+                                   class=\\"MuiSelect-root-269\\"
+                                 >
+                                   <div
+                                     aria-haspopup=\\"true\\"
+                                     aria-pressed=\\"false\\"
+                                     class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
+                                     id=\\"org-affiliation-selector\\"
+                                     role=\\"button\\"
+                                     tabindex=\\"0\\"
+                                   >
+                                     Not UQ
+                                   </div>
+                                   <input
+                                     type=\\"hidden\\"
+                                     value=\\"NotUQ\\"
+                                   />
+                                   <svg
+                                     aria-hidden=\\"true\\"
+                                     class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
+                                     focusable=\\"false\\"
+                                     role=\\"presentation\\"
+                                     viewBox=\\"0 0 24 24\\"
+                                   >
+                                     <path
+                                       d=\\"M7 10l5 5 5-5z\\"
+                                     />
+                                   </svg>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
+                           >
+                             <div
+                               class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
+                             >
+                               <label
+                                 class=\\"MuiFormLabel-root-262 MuiFormLabel-disabled-264 MuiFormLabel-filled-266 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
+                                 data-shrink=\\"true\\"
+                                 for=\\"authors-name-as-published-field\\"
+                               >
+                                 Enter each author's name as published (eg. Smith, John)
+                                 <span
+                                   class=\\"MuiFormLabel-asterisk-268\\"
+                                 >
+                                    *
+                                 </span>
+                               </label>
+                               <div
+                                 class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-disabled-292 MuiInput-disabled-279 MuiInputBase-fullWidth-298 MuiInput-fullWidth-283 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                               >
+                                 <input
+                                   aria-invalid=\\"false\\"
+                                   autocomplete=\\"off\\"
+                                   class=\\"MuiInputBase-input-299 MuiInput-input-284 MuiInputBase-disabled-292 MuiInput-disabled-279\\"
+                                   disabled=\\"\\"
+                                   id=\\"authors-name-as-published-field\\"
+                                   placeholder=\\"Type the name exactly as published\\"
+                                   required=\\"\\"
+                                   type=\\"text\\"
+                                   value=\\"Topology\\"
+                                 />
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-262 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
+                                     data-shrink=\\"false\\"
+                                     for=\\"org-affiliation-name\\"
+                                   >
+                                     Organisation
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-268\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-fullWidth-298 MuiInput-fullWidth-283 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                                   >
+                                     <input
+                                       aria-invalid=\\"false\\"
+                                       class=\\"MuiInputBase-input-299 MuiInput-input-284\\"
+                                       id=\\"org-affiliation-name\\"
+                                       placeholder=\\"Enter the primary affiliated organisation\\"
+                                       required=\\"\\"
+                                       type=\\"text\\"
+                                       value=\\"\\"
+                                     />
+                                   </div>
+                                 </div>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
+                               >
+                                 <div
+                                   class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
+                                 >
+                                   <label
+                                     class=\\"MuiFormLabel-root-262 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
+                                     data-shrink=\\"false\\"
+                                   >
+                                     Organisation type
+                                     <span
+                                       class=\\"MuiFormLabel-asterisk-268\\"
+                                     >
+                                        *
+                                     </span>
+                                   </label>
+                                   <div
+                                     class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
+                                   >
+                                     <div
+                                       class=\\"MuiSelect-root-269\\"
+                                     >
+                                       <div
+                                         aria-haspopup=\\"true\\"
+                                         aria-pressed=\\"false\\"
+                                         class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
+                                         id=\\"org-affiliation-type\\"
+                                         role=\\"button\\"
+                                         tabindex=\\"0\\"
+                                       >
+                                         <span>
+                                           ​
+                                         </span>
+                                       </div>
+                                       <input
+                                         type=\\"hidden\\"
+                                         value=\\"\\"
+                                       />
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M7 10l5 5 5-5z\\"
+                                         />
+                                       </svg>
+                                     </div>
+                                   </div>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
+                             style=\\"margin-bottom: 8px;\\"
+                           >
+                             <button
+                               class=\\"MuiButtonBase-root-241 MuiButtonBase-disabled-242 MuiButton-root-312 MuiButton-contained-323 MuiButton-containedPrimary-324 MuiButton-raised-326 MuiButton-raisedPrimary-327 MuiButton-disabled-332 MuiButton-fullWidth-337\\"
+                               disabled=\\"\\"
+                               id=\\"submit-author\\"
+                               tabindex=\\"-1\\"
+                               type=\\"button\\"
+                             >
+                               <span
+                                 class=\\"MuiButton-label-313\\"
+                               >
+                                 Update author
+                               </span>
+                             </button>
+                           </div>
+                         </div>
+                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -960,31 +960,33 @@
                          <li
                            class=\\"MuiListItem-container-350\\"
                          >
                            <div
                              aria-label=\\"Select this author (Topology) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 WithTheme-WithWidth-ContributorRow---highlighted-370 WithTheme-WithWidth-ContributorRow---rowSelected-371 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
+                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
                              id=\\"contributor-editor-row-0\\"
                              tabindex=\\"0\\"
                            >
                              <div
-                               class=\\"MuiListItemIcon-root-377 WithTheme-WithWidth-ContributorRow---selected-372\\"
+                               class=\\"MuiListItemIcon-root-377\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\"
                                  class=\\"MuiSvgIcon-root-179\\"
                                  focusable=\\"false\\"
                                  role=\\"presentation\\"
                                  viewBox=\\"0 0 24 24\\"
                                >
                                  <path
-                                   d=\\"M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
+                                   d=\\"M0 0h24v24H0V0z\\"
+                                   fill=\\"none\\"
                                  />
+                                 <g>
                                    <path
-                                   d=\\"M0 0h24v24H0z\\"
-                                   fill=\\"none\\"
+                                     d=\\"M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z\\"
                                    />
+                                 </g>
                                </svg>
                              </div>
                              <div
                                class=\\"MuiGrid-container-5 WithTheme-WithWidth-ContributorRow---listContainer-367\\"
                              >
@@ -993,27 +995,38 @@
                                >
                                  <div
                                    class=\\"MuiListItemText-root-360\\"
                                  >
                                    <p
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374 WithTheme-WithWidth-ContributorRow---selected-372 MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
                                    >
                                      Topology
                                    </p>
                                    <span
-                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---selected-372 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-noWrap-128\\"
                                    >
                                      First  listed author
                                    </span>
                                  </div>
                                </div>
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-360\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-366\\"
@@ -1031,11 +1044,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-240\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-179 WithTheme-WithWidth-ContributorRow---selected-372\\"
+                                     class=\\"MuiSvgIcon-root-179\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1063,11 +1076,11 @@
                                  <span
                                    class=\\"MuiIconButton-label-240\\"
                                  >
                                    <svg
                                      aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-179 WithTheme-WithWidth-ContributorRow---selected-372\\"
+                                     class=\\"MuiSvgIcon-root-179\\"
                                      focusable=\\"false\\"
                                      role=\\"presentation\\"
                                      viewBox=\\"0 0 24 24\\"
                                    >
                                      <path
@@ -1527,227 +1540,10 @@
                                </button>
                              </span>
                            </div>
                          </li>
                        </ul>
-                       <div
-                         style=\\"margin-top: 24px;\\"
-                       >
-                         <div>
-                           <span
-                             class=\\"authorSteps\\"
-                           >
-                             Step 2 of 2
-                           </span>
-                            - 
-                           <b>
-                             Update the affiliation data
-                           </b>
-                            for the selected author below.
-                         </div>
-                         <div
-                           class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
-                           style=\\"margin-top: 8px;\\"
-                         >
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-2-49\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-262 MuiFormLabel-filled-266 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
-                                 data-shrink=\\"true\\"
-                               >
-                                 Org affiliation
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
-                                 required=\\"\\"
-                               >
-                                 <div
-                                   class=\\"MuiSelect-root-269\\"
-                                 >
-                                   <div
-                                     aria-haspopup=\\"true\\"
-                                     aria-pressed=\\"false\\"
-                                     class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
-                                     id=\\"org-affiliation-selector\\"
-                                     role=\\"button\\"
-                                     tabindex=\\"0\\"
-                                   >
-                                     Not UQ
-                                   </div>
-                                   <input
-                                     type=\\"hidden\\"
-                                     value=\\"NotUQ\\"
-                                   />
-                                   <svg
-                                     aria-hidden=\\"true\\"
-                                     class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
-                                     focusable=\\"false\\"
-                                     role=\\"presentation\\"
-                                     viewBox=\\"0 0 24 24\\"
-                                   >
-                                     <path
-                                       d=\\"M7 10l5 5 5-5z\\"
-                                     />
-                                   </svg>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-true-47\\"
-                           >
-                             <div
-                               class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
-                             >
-                               <label
-                                 class=\\"MuiFormLabel-root-262 MuiFormLabel-disabled-264 MuiFormLabel-filled-266 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259 MuiInputLabel-shrink-258\\"
-                                 data-shrink=\\"true\\"
-                                 for=\\"authors-name-as-published-field\\"
-                               >
-                                 Enter each author's name as published (eg. Smith, John)
-                                 <span
-                                   class=\\"MuiFormLabel-asterisk-268\\"
-                                 >
-                                    *
-                                 </span>
-                               </label>
-                               <div
-                                 class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-disabled-292 MuiInput-disabled-279 MuiInputBase-fullWidth-298 MuiInput-fullWidth-283 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
-                               >
-                                 <input
-                                   aria-invalid=\\"false\\"
-                                   autocomplete=\\"off\\"
-                                   class=\\"MuiInputBase-input-299 MuiInput-input-284 MuiInputBase-disabled-292 MuiInput-disabled-279\\"
-                                   disabled=\\"\\"
-                                   id=\\"authors-name-as-published-field\\"
-                                   placeholder=\\"Type the name exactly as published\\"
-                                   required=\\"\\"
-                                   type=\\"text\\"
-                                   value=\\"Topology\\"
-                                 />
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
-                           >
-                             <div
-                               class=\\"MuiGrid-container-5 MuiGrid-spacing-xs-8-27\\"
-                             >
-                               <div
-                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-262 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
-                                     data-shrink=\\"false\\"
-                                     for=\\"org-affiliation-name\\"
-                                   >
-                                     Organisation
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-268\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-fullWidth-298 MuiInput-fullWidth-283 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
-                                   >
-                                     <input
-                                       aria-invalid=\\"false\\"
-                                       class=\\"MuiInputBase-input-299 MuiInput-input-284\\"
-                                       id=\\"org-affiliation-name\\"
-                                       placeholder=\\"Enter the primary affiliated organisation\\"
-                                       required=\\"\\"
-                                       type=\\"text\\"
-                                       value=\\"\\"
-                                     />
-                                   </div>
-                                 </div>
-                               </div>
-                               <div
-                                 class=\\"MuiGrid-item-6 MuiGrid-grid-xs-6-39\\"
-                               >
-                                 <div
-                                   class=\\"MuiFormControl-root-251 MuiFormControl-fullWidth-254\\"
-                                 >
-                                   <label
-                                     class=\\"MuiFormLabel-root-262 MuiFormLabel-required-267 MuiInputLabel-root-255 MuiInputLabel-formControl-256 MuiInputLabel-animated-259\\"
-                                     data-shrink=\\"false\\"
-                                   >
-                                     Organisation type
-                                     <span
-                                       class=\\"MuiFormLabel-asterisk-268\\"
-                                     >
-                                        *
-                                     </span>
-                                   </label>
-                                   <div
-                                     class=\\"MuiInputBase-root-289 MuiInput-root-276 MuiInput-underline-280 MuiInputBase-formControl-290 MuiInput-formControl-277\\"
-                                   >
-                                     <div
-                                       class=\\"MuiSelect-root-269\\"
-                                     >
-                                       <div
-                                         aria-haspopup=\\"true\\"
-                                         aria-pressed=\\"false\\"
-                                         class=\\"MuiSelect-select-270 MuiSelect-selectMenu-273 MuiInputBase-input-299 MuiInput-input-284\\"
-                                         id=\\"org-affiliation-type\\"
-                                         role=\\"button\\"
-                                         tabindex=\\"0\\"
-                                       >
-                                         <span>
-                                           ​
-                                         </span>
-                                       </div>
-                                       <input
-                                         type=\\"hidden\\"
-                                         value=\\"\\"
-                                       />
-                                       <svg
-                                         aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-179 MuiSelect-icon-275\\"
-                                         focusable=\\"false\\"
-                                         role=\\"presentation\\"
-                                         viewBox=\\"0 0 24 24\\"
-                                       >
-                                         <path
-                                           d=\\"M7 10l5 5 5-5z\\"
-                                         />
-                                       </svg>
-                                     </div>
-                                   </div>
-                                 </div>
-                               </div>
-                             </div>
-                           </div>
-                           <div
-                             class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45\\"
-                             style=\\"margin-bottom: 8px;\\"
-                           >
-                             <button
-                               class=\\"MuiButtonBase-root-241 MuiButtonBase-disabled-242 MuiButton-root-312 MuiButton-contained-323 MuiButton-containedPrimary-324 MuiButton-raised-326 MuiButton-raisedPrimary-327 MuiButton-disabled-332 MuiButton-fullWidth-337\\"
-                               disabled=\\"\\"
-                               id=\\"submit-author\\"
-                               tabindex=\\"-1\\"
-                               type=\\"button\\"
-                             >
-                               <span
-                                 class=\\"MuiButton-label-313\\"
-                               >
-                                 Update author
-                               </span>
-                             </button>
-                           </div>
-                         </div>
-                       </div>
                      </div>
                    </div>
                    <span
                      class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
                    >"
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1099,11 +1099,11 @@
                          <li
                            class=\\"MuiListItem-container-350\\"
                          >
                            <div
                              aria-label=\\"Select this author (Davidson, Robert) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 WithTheme-WithWidth-ContributorRow---highlighted-370 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
+                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-377\\"
@@ -1150,11 +1150,22 @@
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-360\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-366\\""
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1427,11 +1427,11 @@
                          <li
                            class=\\"MuiListItem-container-350\\"
                          >
                            <div
                              aria-label=\\"Select this author (The Brodsky Quartet) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 WithTheme-WithWidth-ContributorRow---highlighted-370 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
+                             class=\\"MuiListItem-root-349 WithTheme-WithWidth-ContributorRow---listItem-368 MuiListItem-default-352 MuiListItem-gutters-356 MuiListItem-divider-355 MuiListItem-secondaryAction-358\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-377\\"
@@ -1478,14 +1478,25 @@
                                <div
                                  class=\\"MuiGrid-item-6 MuiGrid-grid-xs-12-45 MuiGrid-grid-sm-5-52\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-360\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-102 WithTheme-WithWidth-ContributorRow---primary-374  MuiTypography-body2-110 MuiTypography-noWrap-128\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-102   MuiTypography-caption-112 MuiTypography-noWrap-128\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-366\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1553,15 +1564,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-102 MuiTypography-caption-112 MuiTypography-colorError-136\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1657,13 +1663,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                          </ul>
                        </span>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -128,11 +128,11 @@
        </div>
        <hr
          class=\\"MuiDivider-root-536 PublicationCitation-divider-526\\"
        />
        <form>
-         <span />
+         <div />
          <div
            class=\\"MuiGrid-container-394 MuiGrid-spacing-xs-24-418\\"
          >
            <div
              class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434\\"
@@ -336,29 +336,29 @@
                      <div
                        class=\\"MuiFormControl-root-640\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-651 MuiFormLabel-error-654 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-651 MuiFormLabel-filled-655 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648 MuiInputLabel-shrink-647\\"
+                         data-shrink=\\"true\\"
                        >
                          <span>
                            Scale/Significance of work* 
                            <span
                              style=\\"font-weight: 700;\\"
                            >
                              (not for public view)
                            </span>
                          </span>
                          <span
-                           class=\\"MuiFormLabel-asterisk-657 MuiFormLabel-error-654\\"
+                           class=\\"MuiFormLabel-asterisk-657\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-error-684 MuiInput-error-670 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
+                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
                          label=\\"[object Object]\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-658\\"
@@ -369,18 +369,16 @@
                              class=\\"MuiSelect-select-659 MuiSelect-selectMenu-662 MuiInputBase-input-688 MuiInput-input-673\\"
                              id=\\"significance\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Major
                            </div>
                            <input
                              name=\\"significance\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454026\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-568 MuiSelect-icon-664\\"
                              focusable=\\"false\\"
@@ -391,15 +389,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-767 MuiFormHelperText-error-768 MuiFormHelperText-required-774\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434\\"
                      style=\\"margin-top: 24px;\\"
@@ -1646,11 +1639,80 @@
                        class=\\"MuiInputBase-input-688 MuiInput-input-673 MuiInputBase-inputMultiline-690 MuiInput-inputMultiline-675\\"
                        id=\\"Notes for this work\\"
                        name=\\"comments\\"
                        placeholder=\\"Add any other notes or comments about this work to send to the eSpace team.\\"
                        rows=\\"5\\"
+                     />
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-394 MuiGrid-spacing-xs-24-418 MuiGrid-align-items-xs-flex-start-403 MuiGrid-align-content-xs-center-406 MuiGrid-justify-xs-center-411 Alert-warning-562 Alert-common-554\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-true-436\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-394 MuiGrid-align-items-xs-flex-start-403 MuiGrid-align-content-xs-center-406 MuiGrid-justify-xs-center-411\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-395 Alert-icon-555\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-568 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
                          />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-395 MuiGrid-grid-xs-true-422 Alert-text-556\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Author affiliation rows marked with red are required
+                           </li>
+                           <li>
+                             Creator research statement is required
+                           </li>
+                           <li>
+                             Total page is required
+                           </li>
+                           <li>
+                             Audience size is required
+                           </li>
+                           <li>
+                             Quality indicator is required
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -505,45 +505,38 @@
                    />
                    <div
                      class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-12-448\\"
                    >
                      <div
-                       aria-describedby=\\"rek-total-pages-helper-text\\"
                        class=\\"MuiFormControl-root-640 MuiFormControl-fullWidth-643\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-651 MuiFormLabel-error-654 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-651 MuiFormLabel-filled-655 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648 MuiInputLabel-shrink-647\\"
+                         data-shrink=\\"true\\"
                          for=\\"rek-total-pages\\"
                        >
                          Total pages/Extent
                          <span
-                           class=\\"MuiFormLabel-asterisk-657 MuiFormLabel-error-654\\"
+                           class=\\"MuiFormLabel-asterisk-657\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-error-684 MuiInput-error-670 MuiInputBase-fullWidth-687 MuiInput-fullWidth-672 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
+                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-fullWidth-687 MuiInput-fullWidth-672 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
                        >
                          <input
-                           aria-invalid=\\"true\\"
+                           aria-invalid=\\"false\\"
                            class=\\"MuiInputBase-input-688 MuiInput-input-673\\"
                            id=\\"rek-total-pages\\"
                            name=\\"fez_record_search_key_total_pages.rek_total_pages\\"
                            placeholder=\\"Enter total pages, size or duration of work\\"
                            required=\\"\\"
                            type=\\"text\\"
-                           value=\\"\\"
+                           value=\\"10\\"
                          />
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-767 MuiFormHelperText-error-768 MuiFormHelperText-required-774\\"
-                         id=\\"rek-total-pages-helper-text\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-6-442\\"
                    >
@@ -1696,13 +1689,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Total page is required
                            </li>
                            <li>
                              Audience size is required
                            </li>
                            <li>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -543,22 +543,22 @@
                      <div
                        class=\\"MuiFormControl-root-640\\"
                        style=\\"width: 100%;\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-651 MuiFormLabel-error-654 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-651 MuiFormLabel-filled-655 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648 MuiInputLabel-shrink-647\\"
+                         data-shrink=\\"true\\"
                        >
                          Audience size
                          <span
-                           class=\\"MuiFormLabel-asterisk-657 MuiFormLabel-error-654\\"
+                           class=\\"MuiFormLabel-asterisk-657\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-error-684 MuiInput-error-670 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
+                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
                          label=\\"Audience size\\"
                          required=\\"\\"
                        >
                          <div
                            class=\\"MuiSelect-root-658\\"
@@ -569,18 +569,16 @@
                              class=\\"MuiSelect-select-659 MuiSelect-selectMenu-662 MuiInputBase-input-688 MuiInput-input-673\\"
                              id=\\"rek-audience-size\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Less than 100
                            </div>
                            <input
                              name=\\"fez_record_search_key_audience_size.rek_audience_size\\"
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"453992\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-568 MuiSelect-icon-664\\"
                              focusable=\\"false\\"
@@ -591,15 +589,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-767 MuiFormHelperText-error-768 MuiFormHelperText-required-774\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                    <div
                      class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-6-442\\"
                    >
@@ -1689,13 +1682,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Audience size is required
                            </li>
                            <li>
                              Quality indicator is required
                            </li>
                          </ul>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -598,41 +598,40 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-640 MuiFormControl-fullWidth-643\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-651 MuiFormLabel-error-654 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648\\"
-                         data-shrink=\\"false\\"
+                         class=\\"MuiFormLabel-root-651 MuiFormLabel-filled-655 MuiFormLabel-required-656 MuiInputLabel-root-644 MuiInputLabel-formControl-645 MuiInputLabel-animated-648 MuiInputLabel-shrink-647\\"
+                         data-shrink=\\"true\\"
                        >
                          Quality indicators
                          <span
-                           class=\\"MuiFormLabel-asterisk-657 MuiFormLabel-error-654\\"
+                           class=\\"MuiFormLabel-asterisk-657\\"
                          >
                             *
                          </span>
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-error-684 MuiInput-error-670 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
+                         class=\\"MuiInputBase-root-678 MuiInput-root-665 MuiInput-underline-669 MuiInputBase-formControl-679 MuiInput-formControl-666\\"
                        >
                          <div
                            class=\\"MuiSelect-root-658\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-659 MuiSelect-selectMenu-662 MuiInputBase-input-688 MuiInput-input-673\\"
                              id=\\"quality-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             <span>
-                               ​
-                             </span>
+                             Commissioned by external body
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"\\"
+                             value=\\"454036\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-568 MuiSelect-icon-664\\"
                              focusable=\\"false\\"
@@ -643,15 +642,10 @@
                                d=\\"M7 10l5 5 5-5z\\"
                              />
                            </svg>
                          </div>
                        </div>
-                       <p
-                         class=\\"MuiFormHelperText-root-767 MuiFormHelperText-error-768 MuiFormHelperText-required-774\\"
-                       >
-                         This field is required
-                       </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -1682,13 +1676,10 @@
                            <li>
                              Author affiliation rows marked with red are required
                            </li>
                            <li>
                              Creator research statement is required
-                           </li>
-                           <li>
-                             Quality indicator is required
                            </li>
                          </ul>
                        </span>
                      </div>
                    </div>"
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 5`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1123,11 +1123,11 @@
                          <li
                            class=\\"MuiListItem-container-739\\"
                          >
                            <div
                              aria-label=\\"Select this author (Grinberg, Anna) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 WithTheme-WithWidth-ContributorRow---highlighted-759 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
+                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
                              id=\\"contributor-editor-row-1\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-766\\"
@@ -1174,11 +1174,22 @@
                                <div
                                  class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-5-441\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-749\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-491 WithTheme-WithWidth-ContributorRow---primary-763  MuiTypography-body2-499 MuiTypography-noWrap-517\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-491   MuiTypography-caption-501 MuiTypography-noWrap-517\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-755\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1293,11 +1293,11 @@
                          <li
                            class=\\"MuiListItem-container-739\\"
                          >
                            <div
                              aria-label=\\"Select this author (Healey, Christopher ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 WithTheme-WithWidth-ContributorRow---highlighted-759 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
+                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
                              id=\\"contributor-editor-row-2\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-766\\"
@@ -1344,11 +1344,22 @@
                                <div
                                  class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-5-441\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-749\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-491 WithTheme-WithWidth-ContributorRow---primary-763  MuiTypography-body2-499 MuiTypography-noWrap-517\\"
+                                   >
+                                     test
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-491   MuiTypography-caption-501 MuiTypography-noWrap-517\\"
+                                   >
+                                     Organisation type: Government
+                                   </span>
+                                 </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-755\\""
`;

exports[`MyIncompleteRecord form UQ:716942 - Creative Work:Live Performance of Creative Work - Music should allow user to update work 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1463,11 +1463,11 @@
                          <li
                            class=\\"MuiListItem-container-739\\"
                          >
                            <div
                              aria-label=\\"Select this author (Tomlinson, Vanessa ) to update their affiliation data.\\"
-                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 WithTheme-WithWidth-ContributorRow---highlighted-759 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
+                             class=\\"MuiListItem-root-738 WithTheme-WithWidth-ContributorRow---listItem-757 MuiListItem-default-741 MuiListItem-gutters-745 MuiListItem-divider-744 MuiListItem-secondaryAction-747\\"
                              id=\\"contributor-editor-row-3\\"
                              tabindex=\\"0\\"
                            >
                              <div
                                class=\\"MuiListItemIcon-root-766\\"
@@ -1514,14 +1514,25 @@
                                <div
                                  class=\\"MuiGrid-item-395 MuiGrid-grid-xs-12-434 MuiGrid-grid-sm-5-441\\"
                                >
                                  <div
                                    class=\\"MuiListItemText-root-749\\"
-                                 />
+                                 >
+                                   <p
+                                     class=\\"MuiTypography-root-491 WithTheme-WithWidth-ContributorRow---primary-763  MuiTypography-body2-499 MuiTypography-noWrap-517\\"
+                                   >
+                                     The University of Queensland
+                                   </p>
+                                   <span
+                                     class=\\"MuiTypography-root-491   MuiTypography-caption-501 MuiTypography-noWrap-517\\"
+                                   >
+                                     Organisation type: University
+                                   </span>
                                  </div>
                                </div>
                              </div>
+                           </div>
                            <div
                              class=\\"MuiListItemSecondaryAction-root-755\\"
                            >
                              <span
                                title=\\"Move item up the order\\"
@@ -1589,15 +1600,10 @@
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
-                   <span
-                     class=\\"MuiTypography-root-491 MuiTypography-caption-501 MuiTypography-colorError-525\\"
-                   >
-                     Rows marked with a red prefix must be updated
-                   </span>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -1693,13 +1699,10 @@
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
                          <ul>
-                           <li>
-                             Author affiliation rows marked with red are required
-                           </li>
                            <li>
                              Creator research statement is required
                            </li>
                          </ul>
                        </span>"
`;
